--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/listItem.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/scoreRecord/listItem.html
@@ -21,7 +21,7 @@
 				<blockquote class="layui-elem-quote layui-quote-nm">
 					<div class="layui-inline">
 						<div class="layui-input-inline">
-							<a th:href="@{/admin/m/ext/scoreGroup/addItem.gsp}" class="layui-btn">新增评分项</a>
+							<a th:href="@{/admin/m/ext/scoreGroup/addItem.gsp}" class="layui-btn"> <i class="layui-icon">&#xe608;</i> 新增评分项</a>
 						</div>
 					</div>
 				</blockquote>
