--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/core/uum/user/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/core/uum/user/list.html
@@ -21,7 +21,7 @@
 				<blockquote class="layui-elem-quote layui-quote-nm">
 					<div class="layui-inline">
 						<div class="layui-input-inline">
-							<a th:href="@{/admin/c/user/add.gsp}" class="layui-btn">新增</a>
+							<a th:href="@{/admin/c/user/add.gsp}" class="layui-btn"><i class="layui-icon">&#xe608;</i> 新增 </a>
 						</div>
 					</div>
 				</blockquote>
