--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/model/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/model/list.html
@@ -24,7 +24,7 @@
 						<blockquote class="layui-elem-quote layui-quote-nm">
 							<div class="layui-inline">
 								<div class="layui-input-inline">
-									<a th:href="@{/admin/m/base/model/add.gsp}" class="layui-btn">新增</a>
+									<a th:href="@{/admin/m/base/model/add.gsp}" class="layui-btn"> <i class="layui-icon">&#xe608;</i> 新增</a>
 								</div>
 							</div>
 							<div class="layui-inline" style="float: right;">
