--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/model/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/model/list.html
@@ -24,21 +24,22 @@
 						<blockquote class="layui-elem-quote layui-quote-nm">
 							<div class="layui-inline">
 								<div class="layui-input-inline">
-									<a th:href="@{/admin/m/base/model/add.gsp}" class="layui-btn"> <i class="layui-icon">&#xe608;</i> 新增</a>
+									<a th:href="@{/admin/m/base/model/add.gsp}" class="layui-btn"> <i class="layui-icon">&#xe608;</i> 新增
+									</a>
 								</div>
 							</div>
 							<div class="layui-inline" style="float: right;">
-								<div class="layui-input-inline" style="width: 200px;">
+								<div class="layui-input-inline">
 									<select id="modelType" name="type" class="layui-select">
-										<option value="" selected>---请选择模型类型---</option>
+										<option value="" selected>全部模型类型</option>
 										<option value="info">文档模型</option>
 										<option value="node">栏目模型</option>
 										<option value="special">专题模型</option>
 									</select>
+									<button class="layui-btn" lay-submit="" lay-filter="searchForm">
+										<i class="layui-icon">&#xe615;</i>
+									</button>
 								</div>
-								<button class="layui-btn" lay-submit="" lay-filter="searchForm">
-									<i class="layui-icon">&#xe615;</i>
-								</button>
 							</div>
 						</blockquote>
 					</div>
