--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/ad/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/content/ad/list.html
@@ -7,77 +7,77 @@
 <!--/***** 当前页css  end *****/-->
 </head>
 <body>
-    <div class="layui-layout layui-layout-admin">
-        <div th:replace="fragments/nav_admin">导航栏</div>
-        <div th:replace="fragments/menu_admin::menu(parent=content,child=ad)">菜单栏</div>
-        <!--/*******内容*******/-->
-        <div class="layui-body">
-            <div class="layui-main">
-                <!--/***** 面包屑 *****/-->
-                <div class="layui-elem-quote" style="margin-top: 10px;">
-                    <span class="layui-breadcrumb"> <a><cite>内容管理</cite></a><a th:href="@{/admin/m/ext/ad/list.gsp}">友情链接</a><a><cite>列表</cite></a>
-                    </span>
-                </div>
-                <!--/*******操作*******/-->
-                <form th:action="@{/admin/m/ext/ad/list.gsp}" id="typeForm" method="get">
-                    <div class="layui-form-item">
-                        <blockquote class="layui-elem-quote layui-quote-nm">
-                            <div class="layui-inline">
-                                <div class="layui-input-inline">
-                                    <a th:href="@{/admin/m/ext/ad/add.gsp}" class="layui-btn"><i class="layui-icon">&#xe61f;</i> 新增</a>
-                                </div>
-                            </div>
-                            <div class="layui-inline" style="float: right;">
-                                <div class="layui-input-inline">
-                                    <select id="adSlotId" name="adSlotId"><option value="">全部广告类型</option>
-                                        <option th:each="data : ${slot}" th:value="${data.id}" th:text="${data.slotName}"></option></select>
-                                </div>
-                                <div class="layui-input-inline" style="width: 200px;">
-                                    <input type="text" name="type" value="2" hidden="hidden"> <input type="search" id="simpleQueryParam" name="simpleQueryParam" placeholder="关键字" autocomplete="off" class="layui-input">
-                                </div>
-                                <button class="layui-btn" lay-submit="" lay-filter="searchForm">
-                                    <i class="layui-icon">&#xe615;</i>
-                                </button>
-                            </div>
-                        </blockquote>
-                    </div>
-                </form>
-                <!--/***** 列表 *****/-->
-                <table class="layui-table" lay-even="" lay-skin="row">
-                    <thead id="dataTable">
-                        <tr>
-                            <th style="width: 40px">#</th>
-                            <th>广告名称</th>
-                            <th>广告板</th>
-                            <th>开始时间</th>
-                            <th>结束时间</th>
-                            <th>文字</th>
-                            <th>操作</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr th:if="${adList.records == null or adList.records.size() == 0}">
-                            <td colspan="9" style="text-align: center;">暂时没有数据</td>
-                        </tr>
-                        <tr th:each="item,items:${adList.records}">
-                            <td th:text="${adList.pageSize*(adList.page-1)+items.index+1}" style="text-align: center;">序号</td>
-                            <td th:text="${item.adName}">广告名称</td>
-                            <td th:text="${item.slotName}">广告板</td>
-                            <td th:text="${item.beginTime!=null?#dates.format(item.beginTime,'yyyy-MM-dd'):''}">开始时间</td>
-                            <td th:text="${item.endTime!=null?#dates.format(item.endTime,'yyyy-MM-dd'):''}">结束时间</td>
-                            <td th:text="${item.adText}">文字</td>
-                            <td style="text-align: center;"><a class="layui-btn layui-btn-small" th:href="@{/admin/m/ext/ad/edit_{id}.gsp(id=${item.id})}"><i class="layui-icon">&#xe642;</i></a>
-                                <button class="layui-btn layui-btn-small layui-btn-normal" th:onclick="|deleted('${item.id}')|">
-                                    <i class="layui-icon">&#xe640;</i>
-                                </button></td>
-                        </tr>
-                    </tbody>
-                </table>
-                <div id="pageDiv"></div>
-            </div>
-        </div>
-        <div th:replace="fragments/footer_admin">底部版权信息等</div>
-    </div>
+	<div class="layui-layout layui-layout-admin">
+		<div th:replace="fragments/nav_admin">导航栏</div>
+		<div th:replace="fragments/menu_admin::menu(parent=content,child=ad)">菜单栏</div>
+		<!--/*******内容*******/-->
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>内容管理</cite></a><a th:href="@{/admin/m/ext/ad/list.gsp}">友情链接</a><a><cite>列表</cite></a>
+					</span>
+				</div>
+				<!--/*******操作*******/-->
+				<form th:action="@{/admin/m/ext/ad/list.gsp}" id="typeForm" method="get">
+					<div class="layui-form-item">
+						<blockquote class="layui-elem-quote layui-quote-nm">
+							<div class="layui-inline">
+								<div class="layui-input-inline">
+									<a th:href="@{/admin/m/ext/ad/add.gsp}" class="layui-btn"><i class="layui-icon">&#xe61f;</i> 新增</a>
+								</div>
+							</div>
+							<div class="layui-inline" style="float: right;">
+								<div class="layui-input-inline">
+									<select id="adSlotId" name="adSlotId" class="layui-select"><option value="">全部广告类型</option>
+										<option th:each="data : ${slot}" th:value="${data.id}" th:text="${data.slotName}"></option></select>
+								</div>
+								<div class="layui-input-inline" style="width: 200px;">
+									<input type="text" name="type" value="2" hidden="hidden"> <input type="search" id="simpleQueryParam" name="simpleQueryParam" placeholder="关键字" autocomplete="off" class="layui-input">
+								</div>
+								<button class="layui-btn" lay-submit="" lay-filter="searchForm">
+									<i class="layui-icon">&#xe615;</i>
+								</button>
+							</div>
+						</blockquote>
+					</div>
+				</form>
+				<!--/***** 列表 *****/-->
+				<table class="layui-table" lay-even="" lay-skin="row">
+					<thead id="dataTable">
+						<tr>
+							<th style="width: 40px">#</th>
+							<th>广告名称</th>
+							<th>广告板</th>
+							<th>开始时间</th>
+							<th>结束时间</th>
+							<th>文字</th>
+							<th>操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${adList.records == null or adList.records.size() == 0}">
+							<td colspan="9" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="item,items:${adList.records}">
+							<td th:text="${adList.pageSize*(adList.page-1)+items.index+1}" style="text-align: center;">序号</td>
+							<td th:text="${item.adName}">广告名称</td>
+							<td th:text="${item.slotName}">广告板</td>
+							<td th:text="${item.beginTime!=null?#dates.format(item.beginTime,'yyyy-MM-dd'):''}">开始时间</td>
+							<td th:text="${item.endTime!=null?#dates.format(item.endTime,'yyyy-MM-dd'):''}">结束时间</td>
+							<td th:text="${item.adText}">文字</td>
+							<td style="text-align: center;"><a class="layui-btn layui-btn-small" th:href="@{/admin/m/ext/ad/edit_{id}.gsp(id=${item.id})}"><i class="layui-icon">&#xe642;</i></a>
+								<button class="layui-btn layui-btn-small layui-btn-normal" th:onclick="|deleted('${item.id}')|">
+									<i class="layui-icon">&#xe640;</i>
+								</button></td>
+						</tr>
+					</tbody>
+				</table>
+				<div id="pageDiv"></div>
+			</div>
+		</div>
+		<div th:replace="fragments/footer_admin">底部版权信息等</div>
+	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
 <!--/***** 当前页js start *****/-->
