--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/templateTab.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/template/templateTab.html
@@ -21,7 +21,7 @@
 				<div style="display: inline-block; width: 300px; height: 300px; padding: 10px; border: 1px solid #ddd; overflow: auto;">
 					<ul id="fileTreeView"></ul>
 				</div>
-				<div class="site-tips" style="display: inline-block; height: 200px; width: 485px; padding: 10px; margin-left: 10px; vertical-align: top;" id="fileListTable"></div>
+				<div id="fileListTable" class="site-tips" style="display: inline-block; height: 200px; width: 485px; padding: 10px; margin-left: 10px; vertical-align: top;" ></div>
 			</div>
 		</div>
 		<div th:replace="fragments/footer_admin">底部</div>
@@ -47,9 +47,29 @@
         elem : '#fileTreeView', //指定元素      
         target : '_blank', //是否新选项卡打开（比如节点返回href才有效）       
         click : function(item) { //点击节点回调
-            $('#fileListTable').empty();
-            $('#fileListTable').append('<table id="fileListTable" class="layui-table" lay-even="" lay-skin="row"><thead><tr><th width="60">#</th><th>名称</th><th>类型</th><th>大小</th><th>操作</th></tr></thead>'+ 
-                   '<tbody><tr><td>1</td><td>2</td><td>3</td><td>4</td><td>5</td><tr></tbody></table>');
+            console.log(item[0][0].filePath);
+            var url = /*[[@{/admin/m/base/template/getFilesByPath.gsp}]]*/;
+            $.post(url,{parentPath:item[0][0].filePath},function(data){
+                console.log(data);
+                $('#fileListTable').empty();
+                $('#fileListTable').append(
+                      '<table id="fileListTable" class="layui-table" lay-even="" lay-skin="row">'+
+                        '<thead><tr>'+
+	                       '<th width="40">#</th>'+
+	                       '<th>名称</th>'+
+	                       '<th>类型</th>'+
+	                       '<th>大小</th>'+
+	                       '<th>操作</th>'+
+	                          '</tr></thead>'+ 
+                        '<tbody><tr th:if="${data == null or data.size() == 0}">'+
+	                       '<td colspan="5" style="text-align: center;">暂时没有数据</td></tr>'+
+	                       '<tr><td th:text="${itemStat.index+1}" style="text-align: center;"></td>'+
+	                       '<td th:text="${item.fileName}" style="text-align: center;"></td>'+
+	                       '<td th:text="${item.format}" style="text-align: center;"></td>'+
+	                       '<td th:text="${item.fileLength}" style="text-align: center;"></td>'+
+	                       '<td></td><tr>'+
+                       '</tbody></table>');
+            });            
         },
         nodes :[nodes]
     });
