--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/friendlinkType/edit.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/site/friendlinkType/edit.html
@@ -26,13 +26,13 @@
 					<div class="layui-form-item">
 						<label class="layui-form-label">类型名称：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
-							<input type="text" name="typeName" th:field="*{typeName}" placeholder="请输入类型名称" lay-verify="typeName" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+							<input type="text" name="typeName" th:field="*{typeName}" placeholder="请输入类型名称（如：合作伙伴）" lay-verify="typeName" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
 						</div>
 					</div>
 					<div class="layui-form-item">
 						<label class="layui-form-label">类型编码：<span style="color: red">*</span></label>
 						<div class="layui-input-block">
-							<input type="text" name="codeNum" th:field="*{codeNum}" placeholder="请输入类型编码" lay-verify="codeNum" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+							<input type="text" name="codeNum" th:field="*{codeNum}" placeholder="请输入类型编码（如：HZHB或Partner）" lay-verify="codeNum" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
 						</div>
 					</div>
 					<div class="layui-form-item">
