常规维护 不要更新

--- a/tg-cms/src/main/webapp/template/green/index.html
+++ b/tg-cms/src/main/webapp/template/green/index.html
@@ -5,6 +5,7 @@
 </head>
 
 <body>
+	<span tg_core:sys_info="copy_info">ssssssssss</span>
 	<div class="wrapper">
 		<!--=== Header ===-->
 		<div class="header">
